frontend/test/should_fail/index_pattern_index_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	n:N{ascending(Ei >= 0, Ei <= 1)};
	
	modify {
	}
}
